; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_table.c_setEditable.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_table.c_setEditable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32, i32*, i8*)* @setEditable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setEditable(i32* %0, i32* %1, i32 %2, i32* %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  store i8* %4, i8** %10, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @GTK_TREE_MODEL(i32* %14)
  %16 = load i32*, i32** %7, align 8
  %17 = call i32* @gtk_tree_model_get_path(i32 %15, i32* %16)
  store i32* %17, i32** %11, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = call i32* @gtk_tree_path_get_indices(i32* %18)
  %20 = getelementptr inbounds i32, i32* %19, i64 0
  %21 = load i32, i32* %20, align 4
  store i32 %21, i32* %12, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i64 @uiprivTableModelCellEditable(i32* %22, i32 %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %13, align 4
  %28 = load i32*, i32** %9, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = load i32, i32* %13, align 4
  %31 = call i32 @g_object_set(i32* %28, i8* %29, i32 %30, i32* null)
  ret void
}

declare dso_local i32* @gtk_tree_model_get_path(i32, i32*) #1

declare dso_local i32 @GTK_TREE_MODEL(i32*) #1

declare dso_local i32* @gtk_tree_path_get_indices(i32*) #1

declare dso_local i64 @uiprivTableModelCellEditable(i32*, i32, i32) #1

declare dso_local i32 @g_object_set(i32*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
